# smart-fan-rs

./: Cargo.toml
src/: main.rs
