[package]
name = "smart_fan_rs"
version = "0.1.0"
authors = ["Jared Moulton <jaredmoulton3@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.1.0"
esp-backtrace = { version = "0.2.0", features = ["esp32c3", "panic-handler", "print-uart"] }
riscv = "0.8.0"
riscv-rt = { version = "0.9", optional = true }
critical-section  = "1.1.0"

[features]
default = ["rt"]
rt = ["riscv-rt"]
